// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscribing to the DOM should clear all DOM nodes 1`] = `Array []`;

exports[`Subscribing to the DOM should correctly recreate nodes after clean 1`] = `
Array [
  Object {
    "_media": "",
    "_support": false,
    "_type": "RULE",
    "style": Object {
      "0_.a": Object {
        "color": "blue",
      },
    },
  },
  Object {
    "_media": "(min-width: 300px)",
    "_support": false,
    "_type": "RULE",
    "style": Object {
      "0_.b": Object {
        "color": "red",
      },
    },
  },
  Object {
    "_media": "(min-width: 300px) and (max-height: 500px)",
    "_support": false,
    "_type": "RULE",
    "style": Object {
      "0_.c": Object {
        "color": "yellow",
      },
    },
  },
  Object {
    "_type": "KEYFRAME",
    "style": "@-webkit-keyframes k1{from{color:red}to{color:blue}}@-moz-keyframes k1{from{color:red}to{color:blue}}@keyframes k1{from{color:red}to{color:blue}}",
  },
]
`;

exports[`Subscribing to the DOM should render keyframes to a DOM node 1`] = `
Array [
  Object {
    "_type": "KEYFRAME",
    "style": "@-webkit-keyframes k1{from{color:red}to{color:blue}}@-moz-keyframes k1{from{color:red}to{color:blue}}@keyframes k1{from{color:red}to{color:blue}}",
  },
]
`;

exports[`Subscribing to the DOM should render media rules and support rules to single DOM nodes (devMode) 1`] = `
Array [
  Object {
    "_media": "",
    "_support": false,
    "_type": "RULE",
    "style": Object {
      "0_.a": Object {
        "color": "blue",
      },
    },
  },
  Object {
    "_media": "",
    "_support": "true",
    "_type": "RULE",
    "style": Object {
      "(display: flex)": Object {
        "0_.b": Object {
          "display": "flex",
        },
      },
    },
  },
  Object {
    "_media": "(min-width: 300px)",
    "_support": false,
    "_type": "RULE",
    "style": Object {
      "0_.c": Object {
        "color": "red",
      },
    },
  },
  Object {
    "_media": "(min-width: 300px) and (max-height: 500px)",
    "_support": false,
    "_type": "RULE",
    "style": Object {
      "0_.d": Object {
        "color": "yellow",
      },
    },
  },
  Object {
    "_media": "(min-width: 300px) and (max-height: 500px)",
    "_support": "true",
    "_type": "RULE",
    "style": Object {
      "(display: grid)": Object {
        "0_.e": Object {
          "display": "grid",
        },
      },
    },
  },
]
`;

exports[`Subscribing to the DOM should render rules to a DOM node 1`] = `
Array [
  Object {
    "_media": "",
    "_support": false,
    "_type": "RULE",
    "style": Object {
      "0_.a": Object {
        "background-color": "red",
      },
      "1_.b": Object {
        "color": "blue",
      },
      "2_.c:hover": Object {
        "color": "red",
      },
    },
  },
]
`;

exports[`Subscribing to the DOM should render static styles to a DOM node 1`] = `
Array [
  Object {
    "_type": "STATIC",
    "style": "body, html{background-color:red;color:blue}",
  },
]
`;
